--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^10.6.0",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "three": "^0.156.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
