--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,22 @@
 {
-  "extends": "next/core-web-vitals"
-}
+    "extends": "next/core-web-vitals",
+    "rules": {
+
+      "react/no-unescaped-entities": [
+        "error",
+        {
+          "forbid": [
+            {
+              "char": "'",
+              "alternative": "&apos;"
+            },
+            {
+              "char": "\"",
+              "alternative": "&quot;"
+            }
+ 
+          ]
+        }
+      ]
+    }
+  }
